@@ -10,7 +10,6 @@
 
 	<Runtime>
 		<Import assembly = "CBinding.dll"/>
-		<Import assembly = "CBinding.Autotools.dll"/> <!-- temp -->
 		<!-- This is here so that the delete command shows in the package node's context menu -->
 		<Import assembly = "../MonoDevelop.Ide.dll"/>
 	</Runtime>
@@ -21,7 +20,6 @@
 		<AddIn id = "MonoDevelop.Ide" version = "0.15.0"/>
 		<AddIn id = "MonoDevelop.Projects" version = "0.15.0"/>
 		<AddIn id = "MonoDevelop.Projects.Gui" version = "0.15.0"/>
-		<Addin id = "MonoDevelop.Autotools" version = "0.15.0"/> <!-- temp -->
 	</Dependencies>
 
 	<Extension path = "/SharpDevelop/Workbench/FileFilter">
@@ -160,12 +158,7 @@
 		<DataType class = "CBinding.GppCompiler"/>
 		<DataType class = "CBinding.ProjectPackage"/>
 	</Extension>
-	
-	<!-- temp -->
-	<Extension path = "/Autotools/SimpleSetups">
-		<Class class = "CBinding.Autotools.CAutotoolsSetup"/>
-	</Extension>
-	<!--
+<!-- Current Autotools AddIn is very .NET specific
 	<Module>
 	    <Runtime>
 	        <Import assembly = "CBinding.Autotools.dll"/>
@@ -179,5 +172,5 @@
 			<Class class = "CBinding.Autotools.CAutotoolsSetup"/>
 		</Extension>
 	</Module>
-	-->
+-->
 </AddIn>
