@@ -2,6 +2,7 @@
 <stetic-interface>
   <configuration>
     <images-root-path>../</images-root-path>
+    <target-gtk-version>2.10.0</target-gtk-version>
   </configuration>
   <widget class="Gtk.Bin" id="CBinding.CodeGenerationPanel" design-size="505 431">
     <property name="MemberName" />
@@ -429,7 +430,6 @@ Example:
                 <property name="Type">TextOnly</property>
                 <property name="Label" translatable="yes">Add</property>
                 <property name="UseUnderline">True</property>
-                <property name="IsDialogButton">False</property>
               </widget>
               <packing>
                 <property name="LeftAttach">2</property>
@@ -493,6 +493,7 @@ Example:
                   <widget class="Gtk.TreeView" id="libTreeView">
                     <property name="MemberName" />
                     <property name="CanFocus">True</property>
+                    <property name="HeadersClickable">True</property>
                   </widget>
                 </child>
               </widget>
@@ -521,7 +522,6 @@ Example:
                     <property name="Type">TextOnly</property>
                     <property name="Label" translatable="yes">Browse...</property>
                     <property name="UseUnderline">True</property>
-                    <property name="IsDialogButton">False</property>
                   </widget>
                   <packing>
                     <property name="Position">0</property>
@@ -537,7 +537,6 @@ Example:
                     <property name="Type">TextOnly</property>
                     <property name="Label" translatable="yes">Remove</property>
                     <property name="UseUnderline">True</property>
-                    <property name="IsDialogButton">False</property>
                   </widget>
                   <packing>
                     <property name="Position">1</property>
@@ -603,7 +602,6 @@ Example:
                     <property name="Type">TextOnly</property>
                     <property name="Label" translatable="yes">Add</property>
                     <property name="UseUnderline">True</property>
-                    <property name="IsDialogButton">False</property>
                   </widget>
                   <packing>
                     <property name="LeftAttach">2</property>
@@ -667,6 +665,7 @@ Example:
                       <widget class="Gtk.TreeView" id="includePathTreeView">
                         <property name="MemberName" />
                         <property name="CanFocus">True</property>
+                        <property name="HeadersClickable">True</property>
                       </widget>
                     </child>
                   </widget>
@@ -695,7 +694,6 @@ Example:
                         <property name="Type">TextOnly</property>
                         <property name="Label" translatable="yes">Browse...</property>
                         <property name="UseUnderline">True</property>
-                        <property name="IsDialogButton">False</property>
                       </widget>
                       <packing>
                         <property name="Position">0</property>
@@ -711,7 +709,6 @@ Example:
                         <property name="Type">TextOnly</property>
                         <property name="Label" translatable="yes">Remove</property>
                         <property name="UseUnderline">True</property>
-                        <property name="IsDialogButton">False</property>
                       </widget>
                       <packing>
                         <property name="Position">1</property>
@@ -778,7 +775,6 @@ Example:
                     <property name="Type">TextOnly</property>
                     <property name="Label" translatable="yes">Add</property>
                     <property name="UseUnderline">True</property>
-                    <property name="IsDialogButton">False</property>
                   </widget>
                   <packing>
                     <property name="LeftAttach">2</property>
@@ -825,6 +821,7 @@ Example:
                       <widget class="Gtk.TreeView" id="libPathTreeView">
                         <property name="MemberName" />
                         <property name="CanFocus">True</property>
+                        <property name="HeadersClickable">True</property>
                       </widget>
                     </child>
                   </widget>
@@ -853,7 +850,6 @@ Example:
                         <property name="Type">TextOnly</property>
                         <property name="Label" translatable="yes">Browse...</property>
                         <property name="UseUnderline">True</property>
-                        <property name="IsDialogButton">False</property>
                       </widget>
                       <packing>
                         <property name="Position">0</property>
@@ -869,7 +865,6 @@ Example:
                         <property name="Type">TextOnly</property>
                         <property name="Label" translatable="yes">Remove</property>
                         <property name="UseUnderline">True</property>
-                        <property name="IsDialogButton">False</property>
                       </widget>
                       <packing>
                         <property name="Position">1</property>
@@ -1011,7 +1006,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-cancel</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
             <property name="label">gtk-cancel</property>
           </widget>
@@ -1028,7 +1022,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-ok</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-5</property>
             <property name="label">gtk-ok</property>
           </widget>
@@ -1077,7 +1070,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-cancel</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
             <property name="label">gtk-cancel</property>
           </widget>
@@ -1094,7 +1086,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-ok</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-5</property>
             <property name="label">gtk-ok</property>
           </widget>
@@ -1139,6 +1130,7 @@ Example:
                       <widget class="Gtk.TreeView" id="normalPackageTreeView">
                         <property name="MemberName" />
                         <property name="CanFocus">True</property>
+                        <property name="HeadersClickable">True</property>
                       </widget>
                     </child>
                   </widget>
@@ -1166,6 +1158,7 @@ Example:
                       <widget class="Gtk.TreeView" id="projectPackageTreeView">
                         <property name="MemberName" />
                         <property name="CanFocus">True</property>
+                        <property name="HeadersClickable">True</property>
                       </widget>
                     </child>
                   </widget>
@@ -1227,6 +1220,7 @@ Example:
                       <widget class="Gtk.TreeView" id="selectedPackagesTreeView">
                         <property name="MemberName" />
                         <property name="CanFocus">True</property>
+                        <property name="HeadersClickable">True</property>
                       </widget>
                     </child>
                   </widget>
@@ -1258,7 +1252,6 @@ Example:
                         <property name="Icon">stock:gtk-remove Menu</property>
                         <property name="Label" />
                         <property name="UseUnderline">True</property>
-                        <property name="IsDialogButton">False</property>
                       </widget>
                       <packing>
                         <property name="Position">0</property>
@@ -1315,7 +1308,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-cancel</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
             <property name="label">gtk-cancel</property>
           </widget>
@@ -1332,7 +1324,6 @@ Example:
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
             <property name="StockId">gtk-ok</property>
-            <property name="IsDialogButton">True</property>
             <property name="ResponseId">-5</property>
             <property name="label">gtk-ok</property>
           </widget>
@@ -1386,7 +1377,6 @@ Example:
                     <property name="Type">TextOnly</property>
                     <property name="Label" translatable="yes">_Browse</property>
                     <property name="UseUnderline">True</property>
-                    <property name="IsDialogButton">False</property>
                   </widget>
                   <packing>
                     <property name="Position">1</property>
